<resources>
    <string name="app_name">Realtimer</string>

    <string name="str_save">Speichern</string>
    <string name="str_config">Einstellungen</string>

    <!-- StartFragment -->
    <string name="start_title">Initialisierung</string>
    <string name="start_mqtt_test">Verbindungstest ...</string>
    <string name="start_init_error">Fehler bei der Initialisierung!</string>

    <!-- Map Fragment -->
    <string name="map_title">Realtimer</string>
    <string name="map_closest_stations">Haltestellen in der Nähe</string>

    <!-- TripFragment -->
    <string name="trip_title">Aktuelle Fahrt</string>
    <string name="trip_leave_trip">Fahrt beenden</string>

    <!-- Config Fragment -->
    <string name="config_title">Einstellungen</string>
    <string name="config_title_first_start">Ersteinrichtung</string>
    <string name="config_otp_graphql_api_url">OTP-GraphQL API URL</string>
    <string name="config_mqtt_broker_host">MQTT-Host</string>
    <string name="config_mqtt_broker_port">MQTT-Port</string>
    <string name="config_mqtt_broker_username">MQTT-Benutzername</string>
    <string name="config_mqtt_broker_password">MQTT-Passwort</string>
    <string name="config_mqtt_topic_trip_updates">Topic Echtzeitdaten</string>
    <string name="config_mqtt_topic_vehicle_positions">Topic Fahrzeugpositionen</string>
    <string name="config_send_trip_updates">Echtzeitdaten senden</string>
    <string name="config_send_vehicle_positions">Fahrzeugpositionen senden</string>
    <string name="config_vehicle_id">Fahrzeug-ID</string>

    <!-- Departure Item -->
    <string name="departure_platform_code">Steig %s</string>
</resources>