<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@id/btn_save_config"
            tools:context=".ConfigFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_gtfs_feed_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/config_gtfs_feed_url" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_mqtt_broker_host"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/config_mqtt_broker_host" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_mqtt_broker_port"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/config_mqtt_broker_port" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_mqtt_broker_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/config_mqtt_broker_username" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_mqtt_broker_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/config_mqtt_broker_password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_mqtt_topic_trip_updates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/config_mqtt_topic_trip_updates" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_mqtt_topic_vehicle_positions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/config_mqtt_topic_vehicle_positions" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/sw_send_trip_updates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/config_send_trip_updates"
                    android:checked="true" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/sw_send_vehicle_positions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/config_send_vehicle_positions" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_vehicle_id_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_vehicle_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/config_vehicle_id" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:text="@string/str_save" />

    </RelativeLayout>

</layout>
